# robot-md-pendant

./: README.md
.github/workflows/: ci.yml  firmware.yml
config/: buttons.yaml  voice.yaml
docs/: install.md
docs/specs/: 2026-04-20-design.md
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/docs/: hardware-proof.md
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/tests/host/: CMakeLists.txt  test_protocol.c
pendantd/: pyproject.toml
pendantd/src/pendantd/: __main__.py  agent.py  buttons.py  mcp_bridge.py  protocol.py  robot_status.py  server.py  session.py  vision.py  voice_cfg.py  watchdog.py
pendantd/src/pendantd/voice/: buffer.py  endpoint.py  piper.py  wake.py  whisper.py
pendantd/tests/: test_agent.py  test_barge_in.py  test_button_direct_mcp.py  test_button_prompt.py  test_buttons.py  test_chat.py  test_mcp_bridge.py  test_protocol.py  test_ptt.py  test_reconnect.py  test_robot_status.py  test_server.py  test_smoke.py  test_soft_stop.py  test_vision.py  test_voice_buffer.py  test_voice_cfg.py  test_voice_endpoint.py  test_voice_out.py  test_voice_piper.py  test_voice_wake.py  test_voice_whisper.py  test_watchdog.py
pendantd/tests/fixtures/: buttons.invalid.yaml  buttons.valid.yaml  mcp_mock.py
schemas/v1/: barge_in.schema.json  button_press.schema.json  chat_message.schema.json  chat_prompt.schema.json  error.schema.json  heartbeat.schema.json  hello.schema.json  soft_stop.schema.json  status.schema.json  thumbnail.schema.json  tool_call.schema.json  (+3 more)
systemd/: pendantd.service
(+33 files in other folders)
